--- a/Registration Forms/Event form/main.css
+++ b/Registration Forms/Event form/main.css
@@ -20,6 +20,8 @@ main{
     background-color: #fff;
     border-radius: 0.3rem;
     width: 80%;
+    -webkit-box-shadow: 0px 0px 8px 2px rgba(0,0,0,0.74); 
+    box-shadow: 0px 0px 8px 2px rgba(0,0,0,0.74);
 
 }
 h2{
