--- a/responsive with media queries/timeline/main.css
+++ b/responsive with media queries/timeline/main.css
@@ -1,9 +1,8 @@
 @import url('reset.css');
-@import url('buttons.css');
+@import url('timeline.css');
 @import url('typography.css');
-@import url('form.css');
 
 body{
-    background:  #eee;
+    background: #eee;
     padding: 2rem;
 }
