--- a/responsive with media queries/menu_3/navigation.css
+++ b/responsive with media queries/menu_3/navigation.css
@@ -9,10 +9,12 @@
     display: flex;
     position: relative;
     background-color: #ddd;
+    align-items: stretch;
 }
 .main li:hover> a,
 .main a:hover {
-    text-decoration: underline;
+    background-color: #060;
+    color: white;
 
 }
 .main li:hover > ul{
@@ -41,4 +43,12 @@
     display: block;
     text-decoration: none;
     color: black;
+}
+.main ul ul li a{
+    padding-top: 1.5rem;
+
+}
+.main ul ul li a i,
+.main ul ul li a span{
+    display: block;
 }
